--- a/tests/integration/integration-tests.yml
+++ b/tests/integration/integration-tests.yml
@@ -207,8 +207,8 @@
           - test_two['diff']['after']['mtu'] == 1600
           - test_two['interface']['name'] == "GigabitEthernet3"
           - test_two['interface']['device'] == 1
-          - test_two['interface']['enabled'] == false 
-          - test_two['interface']['mtu'] == 1600 
+          - test_two['interface']['enabled'] == false
+          - test_two['interface']['mtu'] == 1600
 
     - name: "3 - Delete interface test100 - GigabitEthernet3"
       netbox_device_interface:
@@ -290,7 +290,7 @@
           - test_five['interface']['mode'] == 100
           - test_five['interface']['mtu'] == 1600
 
-    - name: "6 - Create interface as trunk port" 
+    - name: "6 - Create interface as trunk port"
       netbox_device_interface:
         netbox_url: "http://localhost:32768"
         netbox_token: "0123456789abcdef0123456789abcdef01234567"
@@ -668,7 +668,7 @@
           - test_one['msg'] == "prefix 10.156.0.0/19 created"
           - test_one['prefix']['prefix'] == "10.156.0.0/19"
 
-    - name: "2 - Duplicate" 
+    - name: "2 - Duplicate"
       netbox_prefix:
         netbox_url: http://localhost:32768
         netbox_token: 0123456789abcdef0123456789abcdef01234567
@@ -843,7 +843,7 @@
           - test_nine['diff']['after']['state'] == "present"
           - test_nine['msg'] == "prefix 10.157.0.0/19 created"
           - test_nine['prefix']['prefix'] == "10.157.0.0/19"
-          - test_nine['prefix']['site'] == 1 
+          - test_nine['prefix']['site'] == 1
           - test_nine['prefix']['vrf'] == 1
 
     - name: "10 - Get a new /24 inside 10.157.0.0/19 within Netbox with additional values"
@@ -867,7 +867,7 @@
           - test_ten['diff']['after']['state'] == "present"
           - test_ten['msg'] == "prefix 10.157.0.0/24 created"
           - test_ten['prefix']['prefix'] == "10.157.0.0/24"
-          - test_ten['prefix']['site']['id'] == 1 
+          - test_ten['prefix']['site']['id'] == 1
           - test_ten['prefix']['vrf']['id'] == 1
 
     - name: "11 - Get a new /24 inside 10.156.0.0/19 within Netbox"
@@ -1027,3 +1027,171 @@
           - test_five['diff']['after']['state'] == "absent"
           - test_five['site']['name'] == "Test - Colorado"
           - test_five['msg'] == "site Test - Colorado deleted"
+
+##
+##
+### NETBOX_TENANT
+##
+##
+- name: "TEST NETBOX_TENANT"
+  hosts: localhost
+  connection: local
+  gather_facts: no
+  collections:
+    - fragmentedpacket.netbox_modules
+
+  tasks:
+    - name: "1 - Test tenant creation"
+      netbox_tenant:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: "Tenant ABC"
+      register: test_one
+
+    - name: "1 - ASSERT"
+      assert:
+        that:
+          - test_one is changed
+          - test_one['diff']['before']['state'] == "absent"
+          - test_one['diff']['after']['state'] == "present"
+          - test_one['tenant']['name'] == "Tenant ABC"
+          - test_one['tenant']['slug'] == "tenant-abc"
+
+    - name: "Test duplicate tenant"
+      netbox_tenant:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: "Tenant ABC"
+      register: test_two
+
+    - name: "2 - ASSERT"
+      assert:
+        that:
+          - not test_two['changed']
+          - test_two['tenant']['name'] == "Tenant ABC"
+          - test_two['tenant']['slug'] == "tenant-abc"
+
+    - name: "3 - Test update"
+      netbox_tenant:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: "Tenant ABC"
+          description: "Updated description"
+      register: test_three
+
+    - name: "3 - ASSERT"
+      assert:
+        that:
+          - test_three is changed
+          - test_three['diff']['after']['description'] == "Updated description"
+          - test_three['tenant']['name'] == "Tenant ABC"
+          - test_three['tenant']['slug'] == "tenant-abc"
+
+    - name: "4 - Test delete"
+      netbox_tenant:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: "Tenant ABC"
+        state: "absent"
+      register: test_four
+
+    - name: "4 - ASSERT"
+      assert:
+        that:
+          - test_four is changed
+          - test_four['diff']['before']['state'] == "present"
+          - test_four['diff']['after']['state'] == "absent"
+
+    - name: "5 - Create tenant with all parameters"
+      netbox_tenant:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: "Tenant ABC"
+          description: "ABC Incorporated"
+          comments: "### This tenant is super cool"
+          group: "Test Tenant Group"
+          tags:
+            - tagA
+            - tagB
+            - tagC
+        state: present
+      register: test_five
+
+    - name: "5 - ASSERT"
+      assert:
+        that:
+          - test_five is changed
+          - test_five['diff']['before']['state'] == "absent"
+          - test_five['diff']['after']['state'] == "present"
+          - test_five['tenant']['name'] == "Tenant ABC"
+          - test_five['tenant']['slug'] == "tenant-abc"
+          - test_five['tenant']['description'] == "ABC Incorporated"
+          - test_five['tenant']['comments'] == "### This tenant is super cool"
+          - test_five['tenant']['group'] == 1
+          - test_five['tenant']['tags'] | length == 3
+
+##
+##
+### NETBOX_TENANT_GROUP
+##
+##
+- name: "TEST NETBOX_TENANT_GROUP"
+  hosts: localhost
+  connection: local
+  gather_facts: no
+  collections:
+    - fragmentedpacket.netbox_modules
+
+  tasks:
+    - name: "1 - Test tenant group creation"
+      netbox_tenant_group:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: "Test Tenant Group Two"
+      register: test_one
+
+    - name: "1 - ASSERT"
+      assert:
+        that:
+          - test_one is changed
+          - test_one['diff']['before']['state'] == "absent"
+          - test_one['diff']['after']['state'] == "present"
+          - test_one['tenant_group']['name'] == "Test Tenant Group Two"
+          - test_one['tenant_group']['slug'] == "test-tenant-group-two"
+
+    - name: "Test duplicate tenant group"
+      netbox_tenant_group:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: "Test Tenant Group Two"
+      register: test_two
+
+    - name: "2 - ASSERT"
+      assert:
+        that:
+          - not test_two['changed']
+          - test_two['tenant_group']['name'] == "Test Tenant Group Two"
+          - test_two['tenant_group']['slug'] == "test-tenant-group-two"
+
+    - name: "3 - Test delete"
+      netbox_tenant_group:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: "Test Tenant Group Two"
+        state: "absent"
+      register: test_three
+
+    - name: "3 - ASSERT"
+      assert:
+        that:
+          - test_three is changed
+          - test_three['diff']['before']['state'] == "present"
+          - test_three['diff']['after']['state'] == "absent"
