--- a/tests/integration/integration-tests.yml
+++ b/tests/integration/integration-tests.yml
@@ -2562,3 +2562,126 @@
           - test_four['rir']['slug'] == "test-rir-one"
           - test_four['rir']['is_private'] == true
           - test_four['msg'] == "rir Test RIR One deleted"
+
+##
+##
+### NETBOX_AGGEGATE
+##
+##
+- name: "TEST NETBOX_AGGREGATE"
+  connection: local
+  hosts: localhost
+  gather_facts: False
+  collections:
+    - fragmentedpacket.netbox_modules
+
+  tasks:
+    - name: "AGGREGATE 1: Necessary info creation"
+      netbox_aggregate:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          prefix: "10.0.0.0/8"
+          rir: "Example RIR"
+        state: present
+      register: test_one
+
+    - name: "AGGREGATE 1: ASSERT - Necessary info creation"
+      assert:
+        that:
+          - test_one is changed
+          - test_one['diff']['before']['state'] == "absent"
+          - test_one['diff']['after']['state'] == "present"
+          - test_one['aggregate']['prefix'] == "10.0.0.0/8"
+          - test_one['aggregate']['family'] == 4
+          - test_one['aggregate']['rir'] == 1
+          - test_one['msg'] == "aggregate 10.0.0.0/8 created"
+
+    - name: "AGGREGATE 2: Create duplicate"
+      netbox_aggregate:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          prefix: "10.0.0.0/8"
+        state: present
+      register: test_two
+
+    - name: "AGGREGATE 2: ASSERT - Create duplicate"
+      assert:
+        that:
+          - not test_two['changed']
+          - test_two['aggregate']['prefix'] == "10.0.0.0/8"
+          - test_two['aggregate']['family'] == 4
+          - test_two['aggregate']['rir'] == 1
+          - test_two['msg'] == "aggregate 10.0.0.0/8 already exists"
+
+    - name: "AGGREGATE 3: ASSERT - Update"
+      netbox_aggregate:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          prefix: "10.0.0.0/8"
+          rir: "Example RIR"
+          date_added: "1989-01-18"
+          description: "Test Description"
+          tags:
+            - Schnozzberry
+        state: present
+      register: test_three
+
+    - name: "RIR 3: ASSERT - Updated"
+      assert:
+        that:
+          - test_three is changed
+          - test_three['diff']['after']['date_added'] == "1989-01-18"
+          - test_three['diff']['after']['description'] == "Test Description"
+          - test_three['diff']['after']['tags'][0] == "Schnozzberry"
+          - test_three['aggregate']['prefix'] == "10.0.0.0/8"
+          - test_three['aggregate']['family'] == 4
+          - test_three['aggregate']['rir'] == 1
+          - test_three['aggregate']['date_added'] == "1989-01-18"
+          - test_three['aggregate']['description'] == "Test Description"
+          - test_three['aggregate']['tags'][0] == "Schnozzberry"
+          - test_three['msg'] == "aggregate 10.0.0.0/8 updated"
+
+    - name: "AGGREGATE 4: ASSERT - Delete"
+      netbox_aggregate:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          prefix: "10.0.0.0/8"
+        state: absent
+      register: test_four
+
+    - name: "RIR 4: ASSERT - Delete"
+      assert:
+        that:
+          - test_four is changed
+          - test_four['aggregate']['prefix'] == "10.0.0.0/8"
+          - test_four['aggregate']['family'] == 4
+          - test_four['aggregate']['rir'] == 1
+          - test_four['aggregate']['date_added'] == "1989-01-18"
+          - test_four['aggregate']['description'] == "Test Description"
+          - test_four['aggregate']['tags'][0] == "Schnozzberry"
+          - test_four['msg'] == "aggregate 10.0.0.0/8 deleted"
+
+    - name: "AGGREGATE 5: Necessary info creation"
+      netbox_aggregate:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          prefix: "2001::/32"
+          rir: "Example RIR"
+        state: present
+      register: test_five
+
+    - name: "AGGREGATE 5: ASSERT - Necessary info creation"
+      assert:
+        that:
+          - test_five is changed
+          - test_five['diff']['before']['state'] == "absent"
+          - test_five['diff']['after']['state'] == "present"
+          - test_five['aggregate']['prefix'] == "2001::/32"
+          - test_five['aggregate']['family'] == 6
+          - test_five['aggregate']['rir'] == 1
+          - test_five['msg'] == "aggregate 2001::/32 created"
