--- a/tests/integration/integration-tests.yml
+++ b/tests/integration/integration-tests.yml
@@ -2629,7 +2629,7 @@
         state: present
       register: test_three
 
-    - name: "RIR 3: ASSERT - Updated"
+    - name: "AGGREGATE 3: ASSERT - Updated"
       assert:
         that:
           - test_three is changed
@@ -2653,7 +2653,7 @@
         state: absent
       register: test_four
 
-    - name: "RIR 4: ASSERT - Delete"
+    - name: "AGGREGATE 4: ASSERT - Delete"
       assert:
         that:
           - test_four is changed
@@ -2685,3 +2685,297 @@
           - test_five['aggregate']['family'] == 6
           - test_five['aggregate']['rir'] == 1
           - test_five['msg'] == "aggregate 2001::/32 created"
+
+##
+##
+### NETBOX_REGION
+##
+##
+- name: "TEST NETBOX_REGION"
+  connection: local
+  hosts: localhost
+  gather_facts: False
+  collections:
+    - fragmentedpacket.netbox_modules
+
+  tasks:
+    - name: "REGION 1: Necessary info creation"
+      netbox_region:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: "Test Region One"
+        state: present
+      register: test_one
+
+    - name: "REGION 1: ASSERT - Necessary info creation"
+      assert:
+        that:
+          - test_one is changed
+          - test_one['diff']['before']['state'] == "absent"
+          - test_one['diff']['after']['state'] == "present"
+          - test_one['region']['name'] == "Test Region One"
+          - test_one['region']['slug'] == "test-region-one"
+          - test_one['msg'] == "region Test Region One created"
+
+    - name: "REGION 2: Create duplicate"
+      netbox_region:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: "Test Region One"
+        state: present
+      register: test_two
+
+    - name: "REGION 2: ASSERT - Create duplicate"
+      assert:
+        that:
+          - not test_two['changed']
+          - test_two['region']['name'] == "Test Region One"
+          - test_two['region']['slug'] == "test-region-one"
+          - test_two['msg'] == "region Test Region One already exists"
+
+    - name: "REGION 3: ASSERT - Update"
+      netbox_region:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: "Test Region One"
+          parent_region: "Test Region"
+        state: present
+      register: test_three
+
+    - name: "REGION 3: ASSERT - Updated"
+      assert:
+        that:
+          - test_three is changed
+          - test_three['diff']['after']['parent'] == 1
+          - test_three['region']['name'] == "Test Region One"
+          - test_three['region']['slug'] == "test-region-one"
+          - test_three['region']['parent'] == 1
+          - test_three['msg'] == "region Test Region One updated"
+
+    - name: "REGION 4: ASSERT - Delete"
+      netbox_region:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: "Test Region One"
+        state: absent
+      register: test_four
+
+    - name: "REGION 4: ASSERT - Delete"
+      assert:
+        that:
+          - test_four is changed
+          - test_four['region']['name'] == "Test Region One"
+          - test_four['region']['slug'] == "test-region-one"
+          - test_four['region']['parent'] == 1
+          - test_four['msg'] == "region Test Region One deleted"
+
+##
+##
+### NETBOX_DEVICE_BAY
+##
+##
+- name: "TEST NETBOX_DEVICE_BAY"
+  connection: local
+  hosts: localhost
+  gather_facts: False
+  collections:
+    - fragmentedpacket.netbox_modules
+
+  tasks:
+    - name: "DEVICE_BAY 1: Necessary info creation"
+      netbox_device_bay:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          device: "Test Nexus One"
+          name: "Device Bay One"
+        state: present
+      register: test_one
+
+    - name: "DEVICE_BAY 1: ASSERT - Necessary info creation"
+      assert:
+        that:
+          - test_one is changed
+          - test_one['diff']['before']['state'] == "absent"
+          - test_one['diff']['after']['state'] == "present"
+          - test_one['device_bay']['name'] == "Device Bay One"
+          - test_one['device_bay']['device'] == 4
+          - test_one['msg'] == "device_bay Device Bay One created"
+
+    - name: "DEVICE_BAY 2: Create duplicate"
+      netbox_device_bay:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          device: "Test Nexus One"
+          name: "Device Bay One"
+        state: present
+      register: test_two
+
+    - name: "DEVICE_BAY 2: ASSERT - Create duplicate"
+      assert:
+        that:
+          - not test_two['changed']
+          - test_two['device_bay']['name'] == "Device Bay One"
+          - test_two['device_bay']['device'] == 4
+          - test_two['msg'] == "device_bay Device Bay One already exists"
+
+    - name: "DEVICE_BAY 3: ASSERT - Update"
+      netbox_device_bay:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          device: "Test Nexus One"
+          name: "Device Bay One"
+          installed_device: "Test Nexus Child One"
+          tags:
+            - Schnozzberry
+        state: present
+      register: test_three
+
+    - name: "DEVICE_BAY 3: ASSERT - Updated"
+      assert:
+        that:
+          - test_three is changed
+          - test_three['diff']['after']['installed_device'] == 5
+          - test_three['diff']['after']['tags'][0] == "Schnozzberry"
+          - test_three['device_bay']['name'] == "Device Bay One"
+          - test_three['device_bay']['device'] == 4
+          - test_three['device_bay']['installed_device'] == 5
+          - test_three['device_bay']['tags'][0] == "Schnozzberry"
+          - test_three['msg'] == "device_bay Device Bay One updated"
+
+    - name: "DEVICE_BAY 4: ASSERT - Delete"
+      netbox_device_bay:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: "Device Bay One"
+        state: absent
+      register: test_four
+
+    - name: "DEVICE_BAY 4: ASSERT - Delete"
+      assert:
+        that:
+          - test_four is changed
+          - test_four['device_bay']['name'] == "Device Bay One"
+          - test_four['device_bay']['device'] == 4
+          - test_four['device_bay']['installed_device'] == 5
+          - test_four['device_bay']['tags'][0] == "Schnozzberry"
+          - test_four['msg'] == "device_bay Device Bay One deleted"
+
+##
+##
+### NETBOX_INVENTORY_ITEM
+##
+##
+- name: "TEST NETBOX_INVENTORY_ITEM"
+  connection: local
+  hosts: localhost
+  gather_facts: False
+  collections:
+    - fragmentedpacket.netbox_modules
+
+  tasks:
+    - name: "INVENTORY_ITEM 1: Necessary info creation"
+      netbox_inventory_item:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          device: "test100"
+          name: "10G-SFP+"
+        state: present
+      register: test_one
+
+    - name: "INVENTORY_ITEM 1: ASSERT - Necessary info creation"
+      assert:
+        that:
+          - test_one is changed
+          - test_one['diff']['before']['state'] == "absent"
+          - test_one['diff']['after']['state'] == "present"
+          - test_one['inventory_item']['name'] == "10G-SFP+"
+          - test_one['inventory_item']['device'] == 1
+          - test_one['msg'] == "inventory_item 10G-SFP+ created"
+
+    - name: "INVENTORY_ITEM 2: Create duplicate"
+      netbox_inventory_item:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          device: "test100"
+          name: "10G-SFP+"
+        state: present
+      register: test_two
+
+    - name: "DEVICE_BAY 2: ASSERT - Create duplicate"
+      assert:
+        that:
+          - not test_two['changed']
+          - test_two['inventory_item']['name'] == "10G-SFP+"
+          - test_two['inventory_item']['device'] == 1
+          - test_two['msg'] == "inventory_item 10G-SFP+ already exists"
+
+    - name: "INVENTORY_ITEM 3: ASSERT - Update"
+      netbox_inventory_item:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          device: "test100"
+          name: "10G-SFP+"
+          manufacturer: "Cisco"
+          part_id: "10G-SFP+"
+          serial: "1234"
+          asset_tag: "1234"
+          description: "New SFP"
+          tags:
+            - Schnozzberry
+        state: present
+      register: test_three
+
+    - name: "INVENTORY_ITEM 3: ASSERT - Updated"
+      assert:
+        that:
+          - test_three is changed
+          - test_three['diff']['after']['asset_tag'] == "1234"
+          - test_three['diff']['after']['serial'] == "1234"
+          - test_three['diff']['after']['description'] == "New SFP"
+          - test_three['diff']['after']['manufacturer'] == 1
+          - test_three['diff']['after']['part_id'] == "10G-SFP+"
+          - test_three['diff']['after']['tags'][0] == "Schnozzberry"
+          - test_three['inventory_item']['name'] == "10G-SFP+"
+          - test_three['inventory_item']['device'] == 1
+          - test_three['inventory_item']['asset_tag'] == "1234"
+          - test_three['inventory_item']['serial'] == "1234"
+          - test_three['inventory_item']['description'] == "New SFP"
+          - test_three['inventory_item']['manufacturer'] == 1
+          - test_three['inventory_item']['part_id'] == "10G-SFP+"
+          - test_three['inventory_item']['tags'][0] == "Schnozzberry"
+          - test_three['msg'] == "inventory_item 10G-SFP+ updated"
+
+    - name: "INVENTORY_ITEM 4: ASSERT - Delete"
+      netbox_inventory_item:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          device: "test100"
+          name: "10G-SFP+"
+        state: absent
+      register: test_four
+
+    - name: "INVENTORY_ITEM 4: ASSERT - Delete"
+      assert:
+        that:
+          - test_four is changed
+          - test_four['inventory_item']['name'] == "10G-SFP+"
+          - test_four['inventory_item']['device'] == 1
+          - test_four['inventory_item']['asset_tag'] == "1234"
+          - test_four['inventory_item']['serial'] == "1234"
+          - test_four['inventory_item']['description'] == "New SFP"
+          - test_four['inventory_item']['manufacturer'] == 1
+          - test_four['inventory_item']['part_id'] == "10G-SFP+"
+          - test_four['inventory_item']['tags'][0] == "Schnozzberry"
+          - test_four['msg'] == "inventory_item 10G-SFP+ deleted"
