--- a/tests/integration/integration-tests.yml
+++ b/tests/integration/integration-tests.yml
@@ -38,6 +38,7 @@
           - test_one['device']['site'] == 1
           - test_one['device']['status'] == 3
           - test_one['device']['name'] == "R1"
+          - test_one['msg'] == "device R1 created"
 
     - name: "2 - Duplicate device"
       netbox_device:
@@ -62,6 +63,7 @@
           - test_two['device']['device_type'] == 1
           - test_two['device']['site'] == 1
           - test_two['device']['status'] == 3
+          - test_two['msg'] == "device R1 already exists"
 
     - name: "3 - Update device"
       netbox_device:
@@ -70,6 +72,8 @@
         data:
           name: "R1"
           serial: "FXS1001"
+          primary_ip4: "172.16.180.1/24"
+          primary_ip6: "2001::1:1/64"
         state: present
       register: test_three
 
@@ -80,11 +84,16 @@
           - test_three['msg'] == "device R1 updated"
           - test_three['diff']['before']['serial'] == ""
           - test_three['diff']['after']['serial'] == "FXS1001"
+          - test_three['diff']['after']['primary_ip4'] == 1
+          - test_three['diff']['after']['primary_ip6'] == 2
           - test_three['device']['name'] == "R1"
           - test_three['device']['device_role'] == 1
           - test_three['device']['device_type'] == 1
           - test_three['device']['site'] == 1
           - test_three['device']['status'] == 3
+          - test_three['device']['primary_ip4'] == 1
+          - test_three['device']['primary_ip6'] == 2
+          - test_three['msg'] == "device R1 updated"
 
     - name: "4 - Create device with tags and assign to rack"
       netbox_device:
@@ -121,6 +130,7 @@
           - test_four['device']['tags'][0] == 'Schnozzberry'
           - test_four['device']['tenant'] == 1
           - test_four['device']['asset_tag'] == '1234'
+          - test_four['msg'] == "device TestR1 created"
 
     - name: "5 - Delete previous device"
       netbox_device:
