Final cleanup or so I thought

--- a/tests/integration/integration-tests.yml
+++ b/tests/integration/integration-tests.yml
@@ -83,7 +83,7 @@
           - test_three['device']['device_type'] == 1
           - test_three['device']['site'] == 1
           - test_three['device']['status'] == 3
-          - test_three['serial']['serial'] == "FXS1001"
+          - test_three['device']['serial'] == "FXS1001"
           - test_three['msg'] == "device R1 updated"
 
     - name: "4 - Create device with tags and assign to rack"
