--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,8 @@ matrix:
         - git clone https://github.com/FragmentedPacket/netbox-docker.git
         - cd netbox-docker
         - git checkout startup-dcim-interfaces-2.5
-        - docker-compose --verbose pull
-        - docker-compose --verbose up -d
+        - docker-compose pull
+        - docker-compose up -d
         - cd ..
 
     - name: "Python 3.6 - Netbox 2.6 - Ansible Devel"
@@ -44,21 +44,19 @@ matrix:
         # Setup netbox container for integration testing
         - git clone https://github.com/FragmentedPacket/netbox-docker.git
         - cd netbox-docker
-        - git checkout startup-dcim-interfaces-2.5
-        - docker-compose --verbose pull
-        - docker-compose --verbose up -d
+        - docker-compose pull
+        - docker-compose up -d
         - cd ..
         - pip install -U pip
         - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.3b0
         - pip install jmespath
         - pip install pynetbox==4.0.6 cryptography
-        - pip install jmespath
         - cd ../../
         # This is due to ansible-test only being available within devel branch
         - git clone https://github.com/ansible/ansible.git
         - cd ansible
         - source hacking/env-setup
-        - cd ..
+        - cd  ..
 
 before_script:
   - mkdir -p ~/ansible_collections/$COLLECTION_NAMESPACE
