--- a/.travis.yml
+++ b/.travis.yml
@@ -60,11 +60,8 @@ matrix:
         - cd  ..
 
 before_script:
-  - echo $PWD
-  - echo $HOME
-  - ls -la
   - mkdir -p ~/ansible_collections/$COLLECTION_NAMESPACE
-  - cp -R FragmentedPacket/$COLLECTION_NAME ~/ansible_collections/$COLLECTION_NAMESPACE/$COLLECTION_NAME
+  - cp -R $COLLECTION_NAME ~/ansible_collections/$COLLECTION_NAMESPACE/$COLLECTION_NAME
   - cd ~/ansible_collections/$COLLECTION_NAMESPACE/$COLLECTION_NAME
   - ansible-galaxy collection build .
   - ansible-galaxy collection install $COLLECTION_NAMESPACE-$COLLECTION_NAME-$COLLECTION_VERSION.tar.gz -p /home/travis/.ansible/collections
