--- a/.travis.yml
+++ b/.travis.yml
@@ -18,16 +18,6 @@ matrix:
       python: 3.6
       env: PYTHON_VER=3.6 VERSION=v2.5 ANSIBLE_VER=2.9.0rc4
       install:
-        - pip install -U pip
-        - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.3b0
-        - pip install pynetbox==4.0.6 cryptography codecov
-        - pip install jmespath
-        - cd ../../
-        # This is due to ansible-test only being available within devel branch
-        - git clone https://github.com/ansible/ansible.git
-        - cd ansible
-        - git checkout stable-2.9
-        - source hacking/env-setup
         - cd ..
         # Setup netbox container for integration testing
         - git clone https://github.com/FragmentedPacket/netbox-docker.git
@@ -35,6 +25,15 @@ matrix:
         - git checkout startup-dcim-interfaces-2.5
         - docker-compose pull
         - docker-compose up -d
+        - cd ..
+        - pip install -U pip
+        - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.3b0
+        - pip install pynetbox==4.0.6 cryptography codecov jmespath
+        # This is due to ansible-test only being available within devel branch
+        - git clone https://github.com/ansible/ansible.git
+        - cd ansible
+        - git checkout stable-2.9
+        - source hacking/env-setup
         - cd ..
 
     - name: "Python 3.6 - Netbox 2.6 - Ansible Devel"
