--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ matrix:
       script:
         - ansible-test units --python $PYTHON_VER -v
         - black . --check
-        - "sleep 60"
+        - timeout 300 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:9000)" != "200" ]]; do echo "waiting for Netbox"; sleep 5; done' || false
         - python tests/integration/netbox-deploy.py
         - ansible-playbook tests/integration/integration-tests.yml -v
 
@@ -79,6 +79,6 @@ matrix:
       script:
         - ansible-test units --python $PYTHON_VER -v
         - black . --check
-        - "sleep 60"
+        - timeout 300 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:9000)" != "200" ]]; do echo "waiting for Netbox"; sleep 5; done' || false
         - python tests/integration/netbox-deploy.py
         - ansible-playbook tests/integration/integration-tests.yml -v
