--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ env:
 
 matrix:
   include:
-    - name: "Python 3.6 - Netbox 2.5 - Ansible 2.9RC1"
+    - name: "Python 3.6 - Netbox 2.5 - Ansible 2.9RC4"
       python: 3.6
-      env: PYTHON_VER=3.6 VERSION=v2.5 ANSIBLE_VER=2.9.0rc1
+      env: PYTHON_VER=3.6 VERSION=v2.5 ANSIBLE_VER=2.9.0rc4
       install:
         - pip install -U pip
         - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.3b0
@@ -30,38 +30,27 @@ matrix:
         - source hacking/env-setup
         - cd ..
         # Setup netbox container for integration testing
-        - git clone https://github.com/netbox-community/netbox-docker.git
+        - git clone https://github.com/FragmentedPacket/netbox-docker.git
         - cd netbox-docker
+        - git checkout startup-dcim-interfaces-2.5
         - docker-compose --verbose pull
         - docker-compose --verbose up -d
         - cd ..
-      
-      before_script:
-        - mkdir -p ~/ansible_collections/$COLLECTION_NAMESPACE
-        - cp -R FragmentedPacket/$COLLECTION_NAME ~/ansible_collections/$COLLECTION_NAMESPACE/$COLLECTION_NAME
-        - cd ~/ansible_collections/$COLLECTION_NAMESPACE/$COLLECTION_NAME
-        - ansible-galaxy collection build .
-        - ansible-galaxy collection install $COLLECTION_NAMESPACE-$COLLECTION_NAME-$COLLECTION_VERSION.tar.gz -p /home/travis/.ansible/collections
-      
-      script:
-        - ansible-test units --python $PYTHON_VER -v
-        - black . --check
-        - timeout 300 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:32768)" != "200" ]]; do echo "waiting for Netbox"; sleep 5; done' || false
-        - python tests/integration/netbox-deploy.py
-        - ansible-playbook tests/integration/integration-tests.yml -v
 
     - name: "Python 3.6 - Netbox 2.6 - Ansible Devel"
       python: 3.6
       env: PYTHON_VER=3.6 VERSION=v2.6
       install:
         # Setup netbox container for integration testing
-        - git clone https://github.com/netbox-community/netbox-docker.git
+        - git clone https://github.com/FragmentedPacket/netbox-docker.git
         - cd netbox-docker
+        - git checkout startup-dcim-interfaces-2.5
         - docker-compose --verbose pull
         - docker-compose --verbose up -d
         - cd ..
         - pip install -U pip
         - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.3b0
+        - pip install jmespath
         - pip install pynetbox==4.0.6 cryptography
         - pip install jmespath
         - cd ../../
@@ -71,16 +60,16 @@ matrix:
         - source hacking/env-setup
         - cd ..
 
-      before_script:
-        - mkdir -p ~/ansible_collections/$COLLECTION_NAMESPACE
-        - cp -R FragmentedPacket/$COLLECTION_NAME ~/ansible_collections/$COLLECTION_NAMESPACE/$COLLECTION_NAME
-        - cd ~/ansible_collections/$COLLECTION_NAMESPACE/$COLLECTION_NAME
-        - ansible-galaxy collection build .
-        - ansible-galaxy collection install $COLLECTION_NAMESPACE-$COLLECTION_NAME-$COLLECTION_VERSION.tar.gz -p /home/travis/.ansible/collections
-      
-      script:
-        - ansible-test units --python $PYTHON_VER -v
-        - black . --check
-        - timeout 300 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:32768)" != "200" ]]; do echo "waiting for Netbox"; sleep 5; done' || false
-        - python tests/integration/netbox-deploy.py
-        - ansible-playbook tests/integration/integration-tests.yml -v
+before_script:
+  - mkdir -p ~/ansible_collections/$COLLECTION_NAMESPACE
+  - cp -R FragmentedPacket/$COLLECTION_NAME ~/ansible_collections/$COLLECTION_NAMESPACE/$COLLECTION_NAME
+  - cd ~/ansible_collections/$COLLECTION_NAMESPACE/$COLLECTION_NAME
+  - ansible-galaxy collection build .
+  - ansible-galaxy collection install $COLLECTION_NAMESPACE-$COLLECTION_NAME-$COLLECTION_VERSION.tar.gz -p /home/travis/.ansible/collections
+
+script:
+  - ansible-test units --python $PYTHON_VER -v
+  - black . --check
+  - timeout 300 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:32768)" != "200" ]]; do echo "waiting for Netbox"; sleep 5; done' || false
+  - python tests/integration/netbox-deploy.py
+  - ansible-playbook tests/integration/integration-tests.yml -v
