--- a/.travis.yml
+++ b/.travis.yml
@@ -63,5 +63,6 @@ script:
   - ansible-test units --python $PYTHON_VER -v
   - black . --check
   - timeout 300 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:32768)" != "200" ]]; do echo "waiting for Netbox"; sleep 5; done' || false
+  - docker logs netbox-docker_netbox_1
   - python tests/integration/netbox-deploy.py
   - ansible-playbook tests/integration/integration-tests.yml -v
