--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ matrix:
 
     - name: "Python 3.6 - Netbox 2.6 - Ansible Devel"
       python: 3.6
-      env: PYTHON_VER=3.6 VERSION=v2.6
+      env: PYTHON_VER=3.6
       install:
         - cd ..
         # Setup netbox container for integration testing
@@ -63,6 +63,5 @@ script:
   - ansible-test units --python $PYTHON_VER -v
   - black . --check
   - timeout 300 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:32768)" != "200" ]]; do echo "waiting for Netbox"; sleep 5; done' || false
-  - docker logs netbox-docker_netbox_1
   - python tests/integration/netbox-deploy.py
   - ansible-playbook tests/integration/integration-tests.yml -v
