--- a/.travis.yml
+++ b/.travis.yml
@@ -42,9 +42,7 @@ matrix:
         - cd ..
         - pip install -U pip
         - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.3b0
-        - pip install jmespath
-        - pip install pynetbox==4.0.6 cryptography
-        - cd ..
+        - pip install pynetbox==4.0.6 cryptography jmespath
         # This is due to ansible-test only being available within devel branch
         - git clone https://github.com/ansible/ansible.git
         - cd ansible
