--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ matrix:
         - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.3b0
         - pip install pynetbox==4.0.6 cryptography codecov jmespath ansible==$ANSIBLE_VER
 
-    - name: "Python 3.6 - Netbox 2.6 - Ansible Devel"
+    - name: "Python 3.6 - Netbox Latest - Ansible Devel"
       python: 3.6
       env: PYTHON_VER=3.6
       install:
