--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ env:
 
 matrix:
   include:
-    - name: "Python 3.6 - Netbox 2.5 - Ansible 2.9RC4"
+    - name: "Python 3.6 - Netbox 2.5 - Ansible 2.9"
       python: 3.6
-      env: PYTHON_VER=3.6 VERSION=v2.5 ANSIBLE_VER=2.9.0rc4
+      env: PYTHON_VER=3.6 VERSION=v2.5 ANSIBLE_VER=2.9.0
       install:
         - cd ..
         # Setup netbox container for integration testing
@@ -31,7 +31,7 @@ matrix:
 
     - name: "Python 3.6 - Netbox Latest - Ansible Devel"
       python: 3.6
-      env: PYTHON_VER=3.6
+      env: PYTHON_VER=3.6 VERSION=v2.6.6
       install:
         - cd ..
         # Setup netbox container for integration testing
